--- a/consult/less/styles.less
+++ b/consult/less/styles.less
@@ -21,3 +21,4 @@
 @import url('page_library_add_article.less');
 @import url('page_clients.less'); 
 @import url('page_payment_history.less');
+@import url('page_user_consults.less');
