--- a/consult/less/page_user_consults.less
+++ b/consult/less/page_user_consults.less
@@ -126,7 +126,7 @@ body.page-user-consults{
 			                color:@sky;
 			                font-size:1.2rem;
 			                text-decoration: none;
-			                text-align: center;
+			                margin-left: 70px;
 			                display: block;
 			                &:hover{
 			                    text-decoration: underline;
