--- a/consult/less/page_public_question_list.less
+++ b/consult/less/page_public_question_list.less
@@ -87,6 +87,14 @@ body.page-public-question-list{
                 &:nth-child(2n+1){
                     clear: left;
                 }
+                a.answer-author-link{
+                    color:@sky;
+                    text-decoration: none;
+                    &:hover{
+                        color:@sky;
+                        text-decoration: underline;
+                    }
+                }
                 .author{
                     overflow: hidden;
                     .photo-container{
