--- a/consult/less/modal_sign_up_consultation.less
+++ b/consult/less/modal_sign_up_consultation.less
@@ -10,13 +10,14 @@
 		position: relative;
 		width: 550px;
 		height: auto;
-		margin:100px auto;
+		margin:30px auto;
 		background: @white;
 		border-radius:5px;
 		-o-border-radius:5px;
 		-moz-border-radius:5px;
 		-webkit-border-radius:5px;
 		padding:30px;
+		padding-bottom: 100px;
 		i.fa-close{
 			position: absolute;
 			right:30px;
@@ -152,6 +153,14 @@
 						font-size:2.6rem;
 					}
 				}
+				p.place{
+					font-size:1.4rem;
+					margin-top: 0;
+					i.fa-map-marker{
+						color:@sky;
+						font-size:1.6rem;
+					}
+				}
 			}
 			.right{
 				position: absolute;
@@ -160,11 +169,15 @@
 				width: 124px;
 				.time-container{
 					padding:20px;
-					border:solid 1px @sea;
+					border:solid 1px @sea_light;
 					border-radius:5px;
 					-o-border-radius:5px;
 					-moz-border-radius:5px;
 					-webkit-border-radius:5px;
+					box-shadow:0 0 7px #ccc;
+					-moz-box-shadow:0 0 7px #ccc;
+					-o-box-shadow:0 0 7px #ccc;
+					-webkit-box-shadow:0 0 7px #ccc;
 					.grid{
 						//width: 100px;
 						line-height: 100%;
@@ -187,6 +200,22 @@
 			input[type="submit"]{
 				margin-right: 20px;
 			}
+		}
+		p.endnote{
+			position: absolute;
+			bottom:0;
+			width: 100%;
+			box-sizing:border-box;
+			-moz-box-sizing:border-box;
+			left:0;
+			background: #f2f2f2;
+			border-top:solid 1px #e7e7e7;
+			margin:0;
+			padding:20px;
+			border-radius:0 0 5px 5px;
+			-o-border-radius:0 0 5px 5px;
+			-moz-border-radius:0 0 5px 5px;
+			-webkit-border-radius:0 0 5px 5px;
 		}
 	}
 }
