--- a/consult/less/page_library_article.less
+++ b/consult/less/page_library_article.less
@@ -234,6 +234,28 @@ body.page-library-article{
            		margin-top: 10px;
            	}
 		}
+		&.moderator{
+			p.author{
+				color:@sea;
+				font-size:1.8rem;
+				margin-top: 0;
+				font-weight:500;
+			}
+			header {
+                .published{
+                	margin-top: 10px;
+                	p{
+                		color:  @sea;
+						font-size: 1.2rem;
+						font-weight: 700;
+						margin:3px 0;
+						&.date{
+							color:@sea_light;
+						}
+                	}
+                }
+            }
+		}
 	}
 	section.repost-article{
 		overflow: hidden;
